; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/vc4/extr_vc4_irq.c_vc4_irq_finish_bin_job.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/vc4/extr_vc4_irq.c_vc4_irq_finish_bin_job.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.vc4_dev = type { i32 }
%struct.vc4_exec_info = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_device*)* @vc4_irq_finish_bin_job to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vc4_irq_finish_bin_job(%struct.drm_device* %0) #0 {
  %2 = alloca %struct.drm_device*, align 8
  %3 = alloca %struct.vc4_dev*, align 8
  %4 = alloca %struct.vc4_exec_info*, align 8
  %5 = alloca %struct.vc4_exec_info*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %2, align 8
  %6 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %7 = call %struct.vc4_dev* @to_vc4_dev(%struct.drm_device* %6)
  store %struct.vc4_dev* %7, %struct.vc4_dev** %3, align 8
  %8 = load %struct.vc4_dev*, %struct.vc4_dev** %3, align 8
  %9 = call %struct.vc4_exec_info* @vc4_first_bin_job(%struct.vc4_dev* %8)
  store %struct.vc4_exec_info* %9, %struct.vc4_exec_info** %5, align 8
  %10 = load %struct.vc4_exec_info*, %struct.vc4_exec_info** %5, align 8
  %11 = icmp ne %struct.vc4_exec_info* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  br label %32

13:                                               ; preds = %1
  %14 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %15 = load %struct.vc4_exec_info*, %struct.vc4_exec_info** %5, align 8
  %16 = call i32 @vc4_move_job_to_render(%struct.drm_device* %14, %struct.vc4_exec_info* %15)
  %17 = load %struct.vc4_dev*, %struct.vc4_dev** %3, align 8
  %18 = call %struct.vc4_exec_info* @vc4_first_bin_job(%struct.vc4_dev* %17)
  store %struct.vc4_exec_info* %18, %struct.vc4_exec_info** %4, align 8
  %19 = load %struct.vc4_exec_info*, %struct.vc4_exec_info** %4, align 8
  %20 = icmp ne %struct.vc4_exec_info* %19, null
  br i1 %20, label %21, label %32

21:                                               ; preds = %13
  %22 = load %struct.vc4_exec_info*, %struct.vc4_exec_info** %4, align 8
  %23 = getelementptr inbounds %struct.vc4_exec_info, %struct.vc4_exec_info* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.vc4_exec_info*, %struct.vc4_exec_info** %5, align 8
  %26 = getelementptr inbounds %struct.vc4_exec_info, %struct.vc4_exec_info* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp eq i64 %24, %27
  br i1 %28, label %29, label %32

29:                                               ; preds = %21
  %30 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %31 = call i32 @vc4_submit_next_bin_job(%struct.drm_device* %30)
  br label %32

32:                                               ; preds = %12, %29, %21, %13
  ret void
}

declare dso_local %struct.vc4_dev* @to_vc4_dev(%struct.drm_device*) #1

declare dso_local %struct.vc4_exec_info* @vc4_first_bin_job(%struct.vc4_dev*) #1

declare dso_local i32 @vc4_move_job_to_render(%struct.drm_device*, %struct.vc4_exec_info*) #1

declare dso_local i32 @vc4_submit_next_bin_job(%struct.drm_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
